Сверстал главную страницу

--- a/app/index.html
+++ b/app/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <meta name="og:image" content="../images/social.png">
     <meta name="robots" content="index, follow">
     <meta name="theme-color" content="#000">
     <meta name="apple-mobile-web-app-status-bar-style" content="#000">
     <title>Главная</title>
+    <link rel="shortcut icon" href="img/favicon.ico">
     <link rel="stylesheet" href="css/style.min.css">
     <script src="js/scripts.min.js"></script>
   </head>
@@ -40,10 +40,10 @@
         </div>
       </div>
     </header>
-    <!-- Slider-->
-    <div class="slider">
+    <!-- Slider Header-->
+    <div class="sliderHeader">
       <div class="wrapper">
-        <div class="swiper-container">
+        <div class="swiper-container swiper-header">
           <div class="swiper-wrapper">
             <div class="swiper-slide"><img src="img/slider-header/slide_1.jpg" alt=""></div>
             <div class="swiper-slide"><img src="img/slider-header/slide_2.jpg" alt=""></div>
@@ -124,10 +124,94 @@
               <p>Гарантируем соблюдение всех технических норм при монтаже сплит ситемы, и даем гарантию 3 года на все технические услуги.</p>
               <p>Гарантия на все сплит системы 3 года.</p>
             </div>
+            <div class="contentBlock__btn"><a class="btnBlue from-left" href="#">Скачать прайс</a><a class="btnBlue from-left" href="#">Карта сайта</a></div>
           </aside>
         </section>
       </div>
     </main>
-    <footer class="footer"></footer>
+    <!-- Footer-->
+    <footer class="footer">
+      <!-- Slider Footer-->
+      <div class="sliderFooter">
+        <div class="wrapper">
+          <div class="swiper-container swiper-footer">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide"><img src="img/slider-footer/slide_1.jpg" alt="">
+                <p>Сплит система инверторного типа или обычного, в чем же разница. В этой стать я постараюсь объяснить и рассказать простым понятным языком, что же за зверь такой "инвертор" и почему поставщики сплит систем убеждают купить более дорогой кондиционер...</p><a class="btnBlue btnBlue_width from-left" href="#">Читать далее...</a>
+              </div>
+              <div class="swiper-slide"><img src="img/slider-footer/slide_2.jpg" alt="">
+                <p>Тосот производитель кондиционеров №1 в мире."GREE Electric Appliances, Inc. of Zhuhai" китайская компания, была основана в 1991 году. "Tosot" является мировым гигантом по производству климатического оборудования бытового и промышленного назначения...</p><a class="btnBlue btnBlue_width from-left" href="#">Читать далее...</a>
+              </div>
+              <div class="swiper-slide"><img src="img/slider-footer/slide_3.jpg" alt="">
+                <p>Для тех, кто еще не имеет сплит системы, будет эта статья. Чем руководствуется человек, при выборе сложного оборудования? Кто-то отзывами знакомых, кто-то информацией из интернета, кто-то интуицией, а кто-то рекламой...</p><a class="btnBlue btnBlue_width from-left" href="#">Читать далее...</a>
+              </div>
+              <div class="swiper-slide"><img src="img/slider-footer/slide_4.jpg" alt="">
+                <p>Сплит система инверторного типа или обычного, в чем же разница. В этой стать я постараюсь объяснить и рассказать простым понятным языком, что же за зверь такой "инвертор" и почему поставщики сплит систем убеждают купить более дорогой кондиционер...</p><a class="btnBlue btnBlue_width from-left" href="#">Читать далее...</a>
+              </div>
+              <div class="swiper-slide"><img src="img/slider-footer/slide_5.jpg" alt="">
+                <p>Сплит система инверторного типа или обычного, в чем же разница. В этой стать я постараюсь объяснить и рассказать простым понятным языком, что же за зверь такой "инвертор" и почему поставщики сплит систем убеждают купить более дорогой кондиционер...</p><a class="btnBlue btnBlue_width from-left" href="#">Читать далее...</a>
+              </div>
+              <div class="swiper-slide"><img src="img/slider-footer/slide_6.jpg" alt="">
+                <p>Сплит система инверторного типа или обычного, в чем же разница. В этой стать я постараюсь объяснить и рассказать простым понятным языком, что же за зверь такой "инвертор" и почему поставщики сплит систем убеждают купить более дорогой кондиционер...</p><a class="btnBlue btnBlue_width from-left" href="#">Читать далее...</a>
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+        </div>
+      </div>
+      <!-- Footer Link-->
+      <div class="footerLink">
+        <div class="wrapper">
+          <div class="footerContainer">
+            <nav class="footerBlock">
+              <ul class="footerBlock__link">
+                <li><a href="#">Главная</a></li>
+                <li><a href="#">Наши услуги</a></li>
+                <li><a href="#">Отопление</a></li>
+                <li><a href="#">Портфолио</a></li>
+                <li><a href="#">Кондиционирование</a></li>
+                <li><a href="#">Вопросы</a></li>
+                <li><a href="#">Контакты</a></li>
+              </ul>
+              <ul class="footerBlock__link">
+                <li><a href="#">Направление</a></li>
+                <li><a href="#">Проектирование</a></li>
+                <li><a href="#">Монтаж</a></li>
+                <li><a href="#">Lessar</a></li>
+                <li><a href="#">Lessar Cool +</a></li>
+                <li><a href="#">Lessar Rational</a></li>
+                <li><a href="#">Lessar Inverto</a></li>
+              </ul>
+              <ul class="footerBlock__link">
+                <li><a href="#">Кондиционеры Tosot</a></li>
+                <li><a href="#">Tosot NATAL</a></li>
+                <li><a href="#">Tosot LORD</a></li>
+                <li><a href="#">Tosot LORD EURO</a></li>
+                <li><a href="#">Tosot U-GRACE</a></li>
+                <li><a href="#">Tosot U-MIGHT</a></li>
+                <li><a href="#">Выбираем TOSOT</a></li>
+              </ul>
+              <ul class="footerBlock__link">
+                <li><a href="#">Кондиционеры QC</a></li>
+                <li><a href="#">Quattro-Clima Prato</a></li>
+                <li><a href="#">Quattro-Clima Milano</a></li>
+                <li><a href="#">Инвертор дос. и нед.</a></li>
+                <li><a href="#">Бюджетные сплит системы</a></li>
+                <li><a href="#">Поздравления</a></li>
+                <li><a href="#">Акции</a></li>
+              </ul>
+            </nav>
+            <div class="footerCopyright">
+              <div class="footerCopyright__text">
+                <p class="footerCopyright__address">Ардалл Инжиниринг - Новороссийск</p>
+                <p class="footerCopyright__phone">Мобильный: <span>+7 918 168 70 00</span></p>
+                <p class="footerCopyright__phone">Рабочий: <span>+7 8617 61-92-16</span></p>
+                <p class="footerCopyright__copy">Copyright © 2015-2019</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
